WebCore/bindings/js/JSDOMWindowCustom.cpp
@@ -125,12 +125,12 @@ bool JSDOMWindow::deleteProperty(ExecState* exec, const Identifier& propertyName
     return Base::deleteProperty(exec, propertyName);
 }
 
-void JSDOMWindow::getPropertyNames(ExecState* exec, PropertyNameArray& propertyNames)
+bool JSDOMWindow::customGetPropertyNames(ExecState* exec, PropertyNameArray&)
 {
     // Only allow the window to enumerated by frames in the same origin.
     if (!allowsAccessFrom(exec))
-        return;
-    Base::getPropertyNames(exec, propertyNames);
+        return true;
+    return false;
 }
 
 JSValue* JSDOMWindow::postMessage(ExecState* exec, const List& args)
